# rusty_venture

./: .gitignore  README.md  add_venue_to_teams.py  all_fields_to_json.py  database.py  schedules.py
scripts/: add_club_venue.py  add_venue_to_teams.py  all_fields_to_db.py  balance_home_away.py  balance_pairings.py  brackets.py  clear_pairings.py  comments.py  conflict.py  conflicts.py  database.py  different_ways.py  gen_fake_pairings.py  make_calendar.py  make_pairings.py  mapit.py  pairings2html.py  pairings2xlxs.py  partition.py  partition_prep.py  partition_sat.py  possible_pairings.py  profiler.py  put.py  roundrobin.py  set_team_venue.py  show_venue_match.py  stats.py  time_report.py  update_venues.py
scripts/modules/: calendar_tools.py  database.py  team_report.py  tokens.py
scripts/replaced_by_rust/: all_fields_to_json.py
scripts/static/: grid_template.html  template.css
tools/: Cargo.toml
tools/add_venue/: Cargo.toml
tools/add_venue/src/: main.rs
tools/partition_ga/: Cargo.toml
tools/partition_ga/src/: helper.rs  individual.rs  lib.rs  main.rs  simulation.rs  team.rs
tools/time_report/: Cargo.toml
tools/time_report/src/: main.rs
tools/transform_report/: Cargo.toml
tools/transform_report/src/: main.rs
ui/: main.py  map.py  teams.py  venues.py
