[package]
name = "add_venue"
version = "0.1.0"
authors = ["Henshaw, Andy <Andy.Henshaw@gtri.gatech.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlite = "0.25.0"
serde_json = "1.0.41"
serde = {version = "1.0.102", features = ["derive"] }
clap = "2.33.0"
